# devopspy

./: .pre-commit-config.yaml  README.md  pyproject.toml
.ci/: build.py
.github/workflows/: linux.yml  python-package.yml  windows.yml
subcom/: __init__.py  cicd.py  command.py  common.py  devops.py  install.py
tests/: test_install.py  test_sanity.py
