[tool.poetry]
name = "subcom"
version = "0.1.0"
description = "Subconsious Tools For DevOps and MLOps"
authors = ["Dilawar Singh <dilawar@subcom.tech>"]
license = "AGPL"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
loguru = "^0.6.0"
meta-package-manager = "^4.9.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
mypy = "^0.931"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
